# building-shadow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: cli-reference.md  data-sources.md  getting-started.md  index.md  shadow-computation.md  visualization.md
docs/screenshots/: madrid_shadows.html
src/building_shadow/: __init__.py  __main__.py  cli.py  core.py  custom_buildings.py  models.py  visualization.py
src/building_shadow/sources/: __init__.py  base.py  catastro.py  osm.py  overture.py
