[project]
name = "building-shadow"
version = "0.1.0"
description = "Visualize building shadows using OpenStreetMap data and pybdshadow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "keplergl>=0.3.7",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
    "pybdshadow>=0.3.5",
    "pydantic>=2.0.0",
    "shapely>=2.1.2",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
    "types-requests>=2.32.4.20260107",
]

[project.scripts]
building-shadow = "building_shadow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/building_shadow"]

[tool.uv.pip]
no-deps = true

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 88

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
cache_dir = ".cache/mypy/"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "docs/"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
cache-dir = ".cache/ruff"
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D107", "D401", "EM102", "ERA001", "TRY003"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.pep8-naming]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*.py" = ["D103", "PLR2004", "S101"]
"scripts/*.py" = ["INP001", "T201"]
